crates/ddlog-syntax/tests/validation/fail/relation_with_input_and_output.rast
ROOT@0..79
  COMMENT@0..50 "// kind:item validate ..."
  WHITESPACE@50..51 "\n"
  ITEM@51..79
    RELATION_DEF@51..79
      ATTRIBUTES@51..51
      MODIFIERS@51..63
        INPUT@51..56 "input"
        WHITESPACE@56..57 " "
        OUTPUT@57..63 "output"
      WHITESPACE@63..64 " "
      REL_KW@64..72
        RELATION@64..72 "relation"
      WHITESPACE@72..73 " "
      REL_NAME@73..76
        IDENT@73..76 "Foo"
      REL_COLS@76..78
        L_PAREN@76..77 "("
        R_PAREN@77..78 ")"
      WHITESPACE@78..79 "\n"
--
Error: a relation cannot be marked as both 'input' and 'output'
   ,-[validation/fail/relation_with_input_and_output.dl:2:1]
   |
 2 | input output relation Foo()
   : ^^|^^ ^^^|^^  
   :   `----------- marked as 'input' here
   :          |    
   :          `---- marked as 'output' here
---'
--
// kind:item validate:true pass:false ignore:false
input output relation Foo()
